libaddr (1.0.31.0~bionic) bionic; urgency=high

  * Added support for newlines between addresses.
  * Added support for a '#' comment introducer (along the newline feature).
  * Added the to_string() on the addr_range class.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 11 Jun 2022 21:19:18 -0700

libaddr (1.0.30.0~bionic) bionic; urgency=high

  * Removed cppthread as a dependency. It's not required.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 20 May 2022 07:32:39 -0700

libaddr (1.0.29.0~bionic) bionic; urgency=high

  * Added a function to test an IP to know whether it's a broadcast IP.
  * Fixed documentation about the STRING_IP_... enumeration.
  * Added an advgetopt validator for IP addresses.
  * Made sure headers all use <...> for #include.
  * Support attaching an interface to an address.
  * Fixed compat to v10.
  * Cleaned up the cmake file.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 20 May 2022 07:15:47 -0700

libaddr (1.0.28.0~bionic) bionic; urgency=high

  * Added the Environment Variable Intro.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 05 Mar 2022 21:15:53 -0800

libaddr (1.0.27.0~bionic) bionic; urgency=high

  * Hold the original hostname in case it is rquired for SNI.
  * Added a get_family() function.
  * Renamed f_private_network_defined as just f_private_network.
  * Added a missing set_protocol() in the addr_parser.

 -- Alexis Wilke <alexis@m2osw.com>  Tue, 01 Mar 2022 21:02:10 -0800

libaddr (1.0.26.0~bionic) bionic; urgency=high

  * Properly clean up once done with tests.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 13 Feb 2022 14:12:09 -0800

libaddr (1.0.25.1~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 13 Feb 2022 13:54:16 -0800

libaddr (1.0.25.0~bionic) bionic; urgency=high

  * Implemented the sort so we can have IPv6 first, because we are expected
    to give priority to IPv6 addresses.
  * Added a sort flag to avoid having empty ranges returned.