@@ -64,6 +64,10 @@ public:
     addr const &                    get_to() const;
     void                            from_cidr(addr const & range);
     std::string                     to_string(addr::string_ip_t mode = addr::string_ip_t::STRING_IP_ALL) const;
+    static std::string              to_string(
+                                          vector_t const & ranges
+                                        , addr::string_ip_t mode = addr::string_ip_t::STRING_IP_ALL
+                                        , std::string const & separator = std::string(","));
 
     addr_range                      intersection(addr_range const & rhs) const;
     addr_range                      union_if_possible(addr_range const & rhs) const;
